Fix wrapping text around images in blocks

--- a/sites/all/themes/onespark_custom/sass/screen.scss
+++ b/sites/all/themes/onespark_custom/sass/screen.scss
@@ -468,6 +468,11 @@ body.page-node-5
 				}
 			}
 		}
+
+		.views-field-body 
+		{
+			padding-left:72px;
+		}
 	}
 }
 
@@ -509,6 +514,11 @@ body.page-node-5
 		float:left;
 		margin-right:14px;
 		background:url(../images/date-bg.png) no-repeat;
+	}
+
+	.views-field-description
+	{
+		padding-left:80px;
 	}
 }
 
